objects/Validated_Learning__c.object
<CustomObject>
    <description>Used in Panda to track Validated Learnings for Innovation &amp; Incubation projects</description>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Add comments related to the status of your learning</inlineHelpText>
        <label>Comments</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_to_validate_the_learning__c</fullName>
        <inlineHelpText>Describe here the criteria to validate the learning, be specific and put something measurable.</inlineHelpText>
        <label>Criteria to validate the learning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe here the content of the learning</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the project on which you will test the learning.</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Validated Learnings</relationshipLabel>
        <relationshipName>Validated_Learnings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>If you are still working on the validated learning select draft, once the validated learning is finalized at the DO gate, please select Approved. At the end of the project you should be able to select either Validated or Not Validated.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Not Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Learning__c</fullName>
        <inlineHelpText>Select the type of your validated learning. A learning can be related either to a customer, a problem or a solution.</inlineHelpText>
        <label>Type of Learning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Validated Learning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Validated Learning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validated Learnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>